--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -41102,5 +41102,117 @@
         "published": "Tue, 06 Jan 2026 00:30:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "The funding will be used to scale Even\u2019s hospitals in Bengaluru, where it launched its first facility in May 2025, marking a shift from a membership-led healthcare platform to a vertically integrated provider combining outpatient care, diagnostics and hospitalisation."
+    },
+    {
+        "id": "https://www.theverge.com/tech/855841/ces-2026-mor-morari-inc-taint-zapper-sex-tech-wearables",
+        "title": "The taint bandaid has evolved into the taint zapper",
+        "link": "https://www.theverge.com/tech/855841/ces-2026-mor-morari-inc-taint-zapper-sex-tech-wearables",
+        "published": "2026-01-05T21:29:30-05:00",
+        "source": "The Verge",
+        "summary": "Six years ago, I first laid eyes upon the taint bandaid. It was the first night of CES 2020. In a corner of the inaugural CES Unveiled showcase, there was a lonely booth. Upon a sparse table lay a mannequin with its smooth Ken doll gooch exposed. In that valley of white plastic was a [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/855883/sony-honda-afeela-customer-delivery-suv-concept-ces-2026",
+        "title": "Sony and Honda\u2019s Afeela EV will start customer deliveries in late 2026",
+        "link": "https://www.theverge.com/tech/855883/sony-honda-afeela-customer-delivery-suv-concept-ces-2026",
+        "published": "2026-01-05T20:54:27-05:00",
+        "source": "The Verge",
+        "summary": "Sony and Honda's joint venture, Sony Honda Mobility (SHM), said it will start customer deliveries of the $90,000 Afeela 1 electric vehicle in in the US in late 2026. The company also showed off an SUV concept that it said would inform a production model in the US for as early as 2028. The new [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/peacock-is-expanding-dolby-vision-and-atmos-availability-for-live-sports-023000794.html?src=rss",
+        "title": "Peacock is expanding Dolby Vision and Atmos availability for live sports",
+        "link": "https://www.engadget.com/entertainment/streaming/peacock-is-expanding-dolby-vision-and-atmos-availability-for-live-sports-023000794.html?src=rss",
+        "published": "Tue, 06 Jan 2026 02:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>You\u2019ll be able to watch more live sports programming on <a class=\"link\" href=\"https://www.engadget.com/entertainment/tv-movies/the-new-apple-tv-and-peacock-streaming-bundle-is-officially-available-170403587.html\" target=\"_blank\">Peacock</a> that supports Dolby Vision and Atmos starting this year. At the moment, the only live sports offering you can enjoy with Atmos on the service is <em>Sunday Night Football</em>. Now, Dolby Laboratories has announced at CES that Peacock is expanding the avai"
+    },
+    {
+        "id": "https://www.engadget.com/wearables/rokid-introduces-display-free-ai-smartglasses-at-ces-2026-010017906.html?src=rss",
+        "title": "Rokid introduces display-free AI smartglasses at CES 2026",
+        "link": "https://www.engadget.com/wearables/rokid-introduces-display-free-ai-smartglasses-at-ces-2026-010017906.html?src=rss",
+        "published": "Tue, 06 Jan 2026 01:00:17 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Smartglasses company Rokid has introduced new display-free AI glasses at CES 2026. Dubbed &quot;Style&quot;, the glasses are intended for all-day use and are compatible with users' corrective prescriptions.</p>\n<p>Style supports multiple AI engines, including ChatGPT and DeepSeek, instead of being locked to any LLM. The glasses can also work with Google Maps and Microsoft AI translation.</p>\n<span id=\"end-legacy-contents\"></span><p>Style is powered by a dual-chip setup, with an NXP RT600 hand"
+    },
+    {
+        "id": "https://stoppels.ch/2022/11/27/io-is-no-longer-the-bottleneck.html",
+        "title": "I/O is no longer the bottleneck? (2022)",
+        "link": "https://stoppels.ch/2022/11/27/io-is-no-longer-the-bottleneck.html",
+        "published": "Tue, 06 Jan 2026 00:02:18 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46506994\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/intel-panther-lake-announced-at-ces/",
+        "title": "Intel's Panther Lake CPUs are here, and it's shaping up to be an exciting 2026",
+        "link": "https://www.zdnet.com/article/intel-panther-lake-announced-at-ces/",
+        "published": "Tue, 06 Jan 2026 03:46:00 GMT",
+        "source": "Latest news",
+        "summary": "Intel's Core Ultra Series 3 processors, built on its new 18A architecture, was just officially unveiled at CES."
+    },
+    {
+        "id": "https://www.zdnet.com/article/dell-xps-return-ces-2026/",
+        "title": "Dell just made its boldest product decision yet at CES 2026, and fans should rejoice",
+        "link": "https://www.zdnet.com/article/dell-xps-return-ces-2026/",
+        "published": "Tue, 06 Jan 2026 02:49:00 GMT",
+        "source": "Latest news",
+        "summary": "Dell is walking back recent branding changes with the 'Plus' and 'Premium' monikers, returning the XPS name to its flagship position."
+    },
+    {
+        "id": "https://www.zdnet.com/article/acer-swift-16-ai-laptop-ces-2026/",
+        "title": "One of my favorite Windows laptops from 2025 is getting a design redo, and I'm iffy about it",
+        "link": "https://www.zdnet.com/article/acer-swift-16-ai-laptop-ces-2026/",
+        "published": "Tue, 06 Jan 2026 02:46:00 GMT",
+        "source": "Latest news",
+        "summary": "Acer's Swift 16 AI earned our Editor's Choice award last year, but its 2026 refresh has me scratching my head."
+    },
+    {
+        "id": "https://www.zdnet.com/article/msi-prestige-modern-laptop-hands-on-ces/",
+        "title": "I did not expect this powerful Windows laptop at CES 2026 to be so thin and light",
+        "link": "https://www.zdnet.com/article/msi-prestige-modern-laptop-hands-on-ces/",
+        "published": "Tue, 06 Jan 2026 02:41:00 GMT",
+        "source": "Latest news",
+        "summary": "MSI's Prestige and Modern series laptops have standard OLED displays and Intel 'Panther Lake' chips."
+    },
+    {
+        "id": "https://www.zdnet.com/article/xreal-1s-xr-glasses-review/",
+        "title": "I've tested several pairs of smart glasses at CES 2026 - this one nails both price and performance",
+        "link": "https://www.zdnet.com/article/xreal-1s-xr-glasses-review/",
+        "published": "Tue, 06 Jan 2026 02:36:00 GMT",
+        "source": "Latest news",
+        "summary": "Delivering a superb 3D experience at a reasonable price, the Xreal 1S sets a new bar for sub-$500 AR glasses."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/nvidia-details-new-ai-chips-and-autonomous-car-project-with-mercedes/articleshow/126363903.cms",
+        "title": "Nvidia details new AI chips and autonomous car project with Mercedes",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/nvidia-details-new-ai-chips-and-autonomous-car-project-with-mercedes/articleshow/126363903.cms",
+        "published": "Tue, 06 Jan 2026 07:21:46 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Huang, who spoke during CES, an annual tech conference in Las Vegas, also discussed Nvidia's surprisingly ambitious work around autonomous vehicles. This year, Mercedes-Benz will begin shipping cars equipped with Nvidia self-driving technology comparable to Tesla's Autopilot. Huang also said the company would begin shipping a new AI chip, Vera Rubin, later this year that can do more computing with less power than previous generations of chips could."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/esop-tax-relief-to-widen-new-age-ipo-pipeline-swells/articleshow/126363658.cms",
+        "title": "Esop tax relief may widen; New-age startup IPO pipeline swells",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/esop-tax-relief-to-widen-new-age-ipo-pipeline-swells/articleshow/126363658.cms",
+        "published": "Tue, 06 Jan 2026 07:10:37 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Happy Tuesday! The government is mulling extension of the tax deferral on Esops to all startups. This and more in today\u2019s ETtech Morning Dispatch."
+    },
+    {
+        "id": "https://inc42.com/buzz/the-2025-e2w-rumble-cars24-acquires-carinfo-more/",
+        "title": "The 2025 E2W Rumble, Cars24 Acquires CarInfo & More",
+        "link": "https://inc42.com/buzz/the-2025-e2w-rumble-cars24-acquires-carinfo-more/",
+        "published": "Tue, 06 Jan 2026 02:30:02 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"The 2025 E2W Rumble, Cars24 Acquires CarInfo &amp; More\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-Daily-Brief-67.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />E2W Market Shifts Gears In 2025 India&#8217;s electric two-wheeler (E2W) market hit a speed bump in 2025. Registrations slowed down&#8230;"
+    },
+    {
+        "id": "https://inc42.com/resources/agentic-ai-is-the-next-bet-in-grc/",
+        "title": "Agentic AI Is The Next Bet In GRC",
+        "link": "https://inc42.com/resources/agentic-ai-is-the-next-bet-in-grc/",
+        "published": "Tue, 06 Jan 2026 01:30:25 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Agentic AI Is The Next Bet In GRC\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Untitled-design-45.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Before credit bureaus existed, trust was rebuilt from scratch each time a person applied for a loan. Banks re-verified the&#8230;"
     }
 ]
