📚 Auto-update: News data refreshed - 2026-01-06 03:58 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -41214,5 +41214,165 @@
         "published": "Tue, 06 Jan 2026 01:30:25 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Agentic AI Is The Next Bet In GRC\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Untitled-design-45.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Before credit bureaus existed, trust was rebuilt from scratch each time a person applied for a loan. Banks re-verified the&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/amd-unveils-new-ai-pc-processors-for-general-use-and-gaming-at-ces/",
+        "title": "AMD unveils new AI PC processors for general use and gaming at CES",
+        "link": "https://techcrunch.com/2026/01/05/amd-unveils-new-ai-pc-processors-for-general-use-and-gaming-at-ces/",
+        "published": "Tue, 06 Jan 2026 03:30:00 +0000",
+        "source": "TechCrunch",
+        "summary": "AMD announced the latest version of its AI-powered PC chips designed for a variety of tasks from gaming to content creation and multitasking."
+    },
+    {
+        "id": "https://www.theverge.com/news/851926/alienware-is-working-on-new-slim-and-cheaper-gaming-laptops",
+        "title": "Alienware is working on new slim and cheaper gaming laptops",
+        "link": "https://www.theverge.com/news/851926/alienware-is-working-on-new-slim-and-cheaper-gaming-laptops",
+        "published": "2026-01-05T22:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Dell-owned Alienware is looking to reach a wider swath of gamers, announcing at CES 2026 that it's working on two new laptops: one with a lower, entry-level price and one with an ultra-slim chassis. There aren't many details right now, as Alienware is only sharing some basic renders, and the behind-glass nonworking prototypes I saw [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/851965/hp-crammed-an-entire-desktop-computer-into-this-keyboard",
+        "title": "HP crammed an entire desktop computer into this keyboard",
+        "link": "https://www.theverge.com/news/851965/hp-crammed-an-entire-desktop-computer-into-this-keyboard",
+        "published": "2026-01-05T22:30:00-05:00",
+        "source": "The Verge",
+        "summary": "HP is announcing a new mini desktop computer at CES 2026, and the whole thing is housed in a compact keyboard. The Eliteboard G1a looks like a normal office keyboard with either a captive or detachable USB-C cable, but inside it is an AMD Ryzen AI 300-series chip, stereo speakers, RAM, storage, a fan, and [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/855188/amd-ryzen-7-9850x3d-processor-boost-clock-announcement",
+        "title": "AMD\u2019s new Ryzen 7 9850X3D makes the best gaming CPU even faster",
+        "link": "https://www.theverge.com/tech/855188/amd-ryzen-7-9850x3d-processor-boost-clock-announcement",
+        "published": "2026-01-05T22:30:00-05:00",
+        "source": "The Verge",
+        "summary": "AMD is introducing an improved version of its popular Ryzen 7 9800X3D processor today at CES. The new Ryzen 7 9850X3D offers up the same 8-core / 16-thread CPU as the 9800X3D, running at even faster boost clocks. \"We've fine-tuned our best gaming processor in the world and have increased the boost clocks to 5.6GHz,\" [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/855343/amd-ryzen-ai-400-release-date",
+        "title": "AMD Ryzen AI 400 official: Will these laptop chips maintain AMD\u2019s lead?",
+        "link": "https://www.theverge.com/tech/855343/amd-ryzen-ai-400-release-date",
+        "published": "2026-01-05T22:30:00-05:00",
+        "source": "The Verge",
+        "summary": "We were rightly skeptical of AMD's Ryzen AI 300 \"Strix Point\" laptop chips in 2024. Now they're in some of the very best laptops you can buy, arguably hitting the sweet spot of price, performance, and battery life. Today at CES, AMD is announcing its successor, the Ryzen AI 400 line - but there's nothing [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/855463/amd-strix-halo-ai-max-plus-388-392-handheld-gaming",
+        "title": "AMD heard you like powerful gaming portables \u2014 so here are new Strix Halo chips",
+        "link": "https://www.theverge.com/tech/855463/amd-strix-halo-ai-max-plus-388-392-handheld-gaming",
+        "published": "2026-01-05T22:30:00-05:00",
+        "source": "The Verge",
+        "summary": "AMD's Strix Halo, aka \"Ryzen AI Max,\" is a hugely expensive chip that includes some of the most powerful integrated graphics ever made. Though AMD initially marketed it more to AI workloads with its tremendous complement of up to 128GB of RAM, it's also inspired some unprecedented gaming designs - by far the most powerful [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2026/01/amd-reheats-last-years-ryzen-ai-and-x3d-cpus-for-2026s-laptops-and-desktops/",
+        "title": "AMD reheats last year\u2019s Ryzen AI and X3D CPUs for 2026\u2019s laptops and desktops",
+        "link": "https://arstechnica.com/gadgets/2026/01/amd-reheats-last-years-ryzen-ai-and-x3d-cpus-for-2026s-laptops-and-desktops/",
+        "published": "Tue, 06 Jan 2026 03:30:30 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "But it may become slightly cheaper to buy AMD's fastest integrated Radeon GPUs."
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/alienware-teases-new-super-slim-and-entry-level-gaming-laptops-at-ces-2026-033000700.html?src=rss",
+        "title": "Alienware teases new super-slim and entry-level gaming laptops at CES 2026",
+        "link": "https://www.engadget.com/computing/laptops/alienware-teases-new-super-slim-and-entry-level-gaming-laptops-at-ces-2026-033000700.html?src=rss",
+        "published": "Tue, 06 Jan 2026 03:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>After relaunching its Area-51 brand with <a class=\"link\" href=\"https://www.engadget.com/computing/laptops/alienware-16-area-51-review-a-fully-retooled-gaming-mothership-150000871.html\" target=\"_blank\">a new 16-inch laptop in 2025</a>, Alienware is teasing two new laptops at CES 2026 in an attempt to reach an even larger audience. Dell's gaming brand plans to launch both entry-level and ultra-slim models later this year, and in the meantime, it's rolling out updates to its existing desktops an"
+    },
+    {
+        "id": "https://www.engadget.com/computing/amds-new-ryzen-ai-max-chips-and-ryzen-7-9850x3d-court-desktop-enthusiasts-at-ces-2026-033000587.html?src=rss",
+        "title": "AMD's new Ryzen AI Max+ chips and Ryzen 7 9850X3D court desktop enthusiasts at CES 2026",
+        "link": "https://www.engadget.com/computing/amds-new-ryzen-ai-max-chips-and-ryzen-7-9850x3d-court-desktop-enthusiasts-at-ces-2026-033000587.html?src=rss",
+        "published": "Tue, 06 Jan 2026 03:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>While it's nice to see desktop support in AMD's new Ryzen AI 400 chips, demanding gamers and enthusiasts will likely be more intrigued by the company's next batch of Ryzen AI Max+ chips, as well as the new Ryzen 7 9850X3D with 3D V-Cache. The former will make its way into small desktops and a handful of workhorse laptops, while the latter is another option for gamers who want the speed bump of 3D V-cache without shelling out for the <a class=\"link\" href=\"https://www.engadget.com/computing/amd"
+    },
+    {
+        "id": "https://www.engadget.com/computing/amds-ryzen-ai-400-chips-are-a-big-boost-for-laptops-and-desktops-alike-033000635.html?src=rss",
+        "title": "AMD's Ryzen AI 400 chips are a big boost for laptops and desktops alike",
+        "link": "https://www.engadget.com/computing/amds-ryzen-ai-400-chips-are-a-big-boost-for-laptops-and-desktops-alike-033000635.html?src=rss",
+        "published": "Tue, 06 Jan 2026 03:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The whole AI PC trend didn't exactly set the world on fire last year, but, like clockwork, AMD is still ready to deliver a new batch of AI chips at CES 2026. The Ryzen AI 400 processors will offer some slight speed upgrades over last year's chips, and notably, they also include AMD's first Copilot+ processors for desktops. Sure, the <a class=\"link\" href=\"https://www.engadget.com/computing/laptops/microsofts-copilot-ai-pc-plan-fizzled-but-it-still-served-a-purpose-130000239.html\" target=\"_blan"
+    },
+    {
+        "id": "https://www.engadget.com/computing/hps-eliteboard-made-me-believe-in-keyboard-computers-again-033000955.html?src=rss",
+        "title": "HP's EliteBoard made me believe in keyboard computers again",
+        "link": "https://www.engadget.com/computing/hps-eliteboard-made-me-believe-in-keyboard-computers-again-033000955.html?src=rss",
+        "published": "Tue, 06 Jan 2026 03:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>For as long as I can remember, I've always wanted to have a keyboard computer -- that is, a computer where the entire machine was stuffed inside of a keyboard. Maybe I caught a glimpse of the Commodore 64 at an impressionable age, but for whatever reason, the idea has always intrigued me. Now HP is bringing the concept back with its new EliteBoard G1a &quot;Next Gen AI PC.&quot; </p><p>It's an IT administrator's dream: It looks a typical desktop keyboard, but it has the full power of a Copilo"
+    },
+    {
+        "id": "https://www.zdnet.com/article/amd-ryzen-ai-400-ces-2026/",
+        "title": "AMD's new Ryzen chipset promises faster performance, better gaming, and smarter AI",
+        "link": "https://www.zdnet.com/article/amd-ryzen-ai-400-ces-2026/",
+        "published": "Tue, 06 Jan 2026 03:30:19 GMT",
+        "source": "Latest news",
+        "summary": "AMD unveiled new Ryzen AI laptop, gaming, and workstation processors at CES 2026, setting the stage for the year to come."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-laptops-of-ces-2026/",
+        "title": "The 5 most exciting Windows laptops unveiled at CES 2026 - including this trackpad beast",
+        "link": "https://www.zdnet.com/article/best-laptops-of-ces-2026/",
+        "published": "Tue, 06 Jan 2026 03:23:49 GMT",
+        "source": "Latest news",
+        "summary": "2026 is looking to be an exciting year for PCs: Dell is bringing back the XPS, while MSI just announced a new series of ultra-thin laptops."
+    },
+    {
+        "id": "https://www.zdnet.com/article/this-menstrual-pad-takes-period-blood-and-turns-it-into-data-diagnostics/",
+        "title": "This menstrual pad takes period blood and turns it into data diagnostics",
+        "link": "https://www.zdnet.com/article/this-menstrual-pad-takes-period-blood-and-turns-it-into-data-diagnostics/",
+        "published": "Tue, 06 Jan 2026 03:21:21 GMT",
+        "source": "Latest news",
+        "summary": "Vivoo introduced its conceptual FlowPad at CES, alongside the launch of its smart toilet sensor for hydration detection."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/italy-closes-probe-into-deepseek-after-commitments-to-warn-of-ai-hallucination-risks/articleshow/126365058.cms",
+        "title": "Italy closes probe into DeepSeek after commitments to warn of AI 'hallucination' risks",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/italy-closes-probe-into-deepseek-after-commitments-to-warn-of-ai-hallucination-risks/articleshow/126365058.cms",
+        "published": "Tue, 06 Jan 2026 09:10:11 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Italy's antitrust authority has \u200dended an investigation \u200binto the Chinese AI system \u2060DeepSeek for allegedly failing to warn users that it may produce false information, \u200cagreeing to \u200cbinding commitments as a condition for closing \u200cthe case."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/hyundai-and-boston-dynamics-unveil-humanoid-robot-atlas-at-ces/articleshow/126364665.cms",
+        "title": "Hyundai and Boston Dynamics unveil humanoid robot Atlas at CES",
+        "link": "https://economictimes.indiatimes.com/tech/technology/hyundai-and-boston-dynamics-unveil-humanoid-robot-atlas-at-ces/articleshow/126364665.cms",
+        "published": "Tue, 06 Jan 2026 08:38:37 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The company said a product version of the robot that will help assemble cars is already in production and will be deployed by 2028 at Hyundai's electric vehicle manufacturing facility near Savannah, Georgia."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/tv-makers-tout-ai-upgrades-at-ces-as-smartphone-threat-looms/articleshow/126364661.cms",
+        "title": "TV makers tout AI upgrades at CES, as smartphone threat looms",
+        "link": "https://economictimes.indiatimes.com/tech/technology/tv-makers-tout-ai-upgrades-at-ces-as-smartphone-threat-looms/articleshow/126364661.cms",
+        "published": "Tue, 06 Jan 2026 08:38:20 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The proportion of daily viewing on TV sets declined from 61% at the start of 2017 to 48% late last year, according to market tracker Ampere Analysis. Smartphone viewing, meanwhile, nearly doubled over that same period to 21%."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/amd-unveils-new-chips-at-ces-event-in-las-vegas/articleshow/126364614.cms",
+        "title": "AMD unveils new chips at CES event in Las Vegas",
+        "link": "https://economictimes.indiatimes.com/tech/technology/amd-unveils-new-chips-at-ces-event-in-las-vegas/articleshow/126364614.cms",
+        "published": "Tue, 06 Jan 2026 08:34:03 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Advanced Micro \u2060Devices CEO Lisa \u200cSu \u200cunveiled the \u200cMI455 GPU chips on \u200bMonday \u200bat the \u200cCES \u200dtrade \u200dshow in Las \u200cVegas."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/intel-launches-next-gen-pc-chip-at-ces-in-las-vegas/articleshow/126364524.cms",
+        "title": "Intel launches next-gen PC chip at CES in Las Vegas",
+        "link": "https://economictimes.indiatimes.com/tech/technology/intel-launches-next-gen-pc-chip-at-ces-in-las-vegas/articleshow/126364524.cms",
+        "published": "Tue, 06 Jan 2026 08:27:11 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Jim Johnson, \u200csenior vice president \u200cand general manager of Intel's PC group, offered technical details about the company's first line of Panther Lake chips known as Intel Core \u200cUltra Series 3. The chips feature a new transistor design and a way to deliver power to the chip due to the company's 18A manufacturing process."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/how-tredence-is-redefining-enterprise-ai-with-last-mile-execution",
+        "title": "How Tredence is redefining enterprise AI with last-mile execution",
+        "link": "https://yourstory.com/2026/01/how-tredence-is-redefining-enterprise-ai-with-last-mile-execution",
+        "published": "Tue, 06 Jan 2026 01:40:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "From just a whiteboard idea in 2013 to serving Fortune 500 companies globally in 2025, San Jose-based Tredence has built its business around solving one persistent challenge in analytics and AI: the last mile problem."
     }
 ]
