📚 Auto-update: News data refreshed - 2026-01-06 04:36 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -41374,5 +41374,77 @@
         "published": "Tue, 06 Jan 2026 01:40:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "From just a whiteboard idea in 2013 to serving Fortune 500 companies globally in 2025, San Jose-based Tredence has built its business around solving one persistent challenge in analytics and AI: the last mile problem."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/another-look-at-ohsnaps-mcon-a-magnetic-game-controller-for-your-phone-042424092.html?src=rss",
+        "title": "Another look at OhSnap's MCON, a magnetic game controller for your phone",
+        "link": "https://www.engadget.com/gaming/another-look-at-ohsnaps-mcon-a-magnetic-game-controller-for-your-phone-042424092.html?src=rss",
+        "published": "Tue, 06 Jan 2026 04:24:24 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>OhSnap <a class=\"link\" href=\"https://www.engadget.com/mobile/smartphones/i-adore-this-clever-mobile-gamepad-with-hall-effect-sticks-and-a-snap-up-design-110007990.html\" target=\"_blank\">won our hearts</a> (and <a class=\"link\" href=\"https://www.engadget.com/ces-2025-the-best-tech-and-gadgets-we-saw-in-las-vegas-211535722.html\" target=\"_blank\">a best of CES award</a>) last year with the MCON, its tiny Bluetooth game pad that magnetically connects to your phone. At the time, we tried a pre-produc"
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/cozyla-showed-off-a-4k-55-inch-digital-family-calendar-at-ces-040352802.html?src=rss",
+        "title": "Cozyla showed off a 4K, 55-inch digital family calendar at CES",
+        "link": "https://www.engadget.com/home/smart-home/cozyla-showed-off-a-4k-55-inch-digital-family-calendar-at-ces-040352802.html?src=rss",
+        "published": "Tue, 06 Jan 2026 04:03:52 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>New tech at CES often makes categorization hard. Is Cozyla\u2019s latest device a digital family calendar, a TV or a smart home hub? After seeing it, I\u2019d say the answer is, yes? Cozyla calls the Calendar + Max the \u201clargest interactive hub in it\u2019s category.\u201d And indeed, it\u2019s the size of a big flatscreen, but the main interface is just like any other Cozyla device, an Android-based family calendar and planner with shared schedules, notes, meal plans, and chores. It syncs with Google, Yahoo and Apple"
+    },
+    {
+        "id": "https://www.bbc.com/news/articles/cx2gn93292do",
+        "title": "A prediction market user made $436,000 betting on Maduro's downfall",
+        "link": "https://www.bbc.com/news/articles/cx2gn93292do",
+        "published": "Tue, 06 Jan 2026 03:59:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46508582\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/most-exciting-tvs-at-ces-2026/",
+        "title": "I found the 4 most exciting TVs at CES 2026 so far (including a 130-inch beast)",
+        "link": "https://www.zdnet.com/article/most-exciting-tvs-at-ces-2026/",
+        "published": "Tue, 06 Jan 2026 04:05:00 GMT",
+        "source": "Latest news",
+        "summary": "At the Las Vegas trade show, we're already seeing several premium offerings from the world's leading TV manufacturers."
+    },
+    {
+        "id": "https://www.zdnet.com/article/most-exciting-parents-kids-tech-ces-2026/",
+        "title": "I found the most useful parenting gadgets at CES 2026 - these are the ones I'd buy ASAP",
+        "link": "https://www.zdnet.com/article/most-exciting-parents-kids-tech-ces-2026/",
+        "published": "Tue, 06 Jan 2026 04:04:00 GMT",
+        "source": "Latest news",
+        "summary": "From a real-time breastfeeding monitor to a cute bladeless stroller fan, we've found some of the most interesting tech aimed at parents and children at CES."
+    },
+    {
+        "id": "https://www.zdnet.com/article/govee-smart-ceiling-light-ces/",
+        "title": "I thought smart ceiling lights were a gimmick - until Govee showed me these models at CES",
+        "link": "https://www.zdnet.com/article/govee-smart-ceiling-light-ces/",
+        "published": "Tue, 06 Jan 2026 04:02:00 GMT",
+        "source": "Latest news",
+        "summary": "Govee has just launched three new flagship smart home products, along with a convenient Samsung SmartThings integration."
+    },
+    {
+        "id": "https://www.zdnet.com/article/lockin-v7-max-smart-lock-ces/",
+        "title": "This smart lock with infinite battery life at CES is my favorite home gadget so far",
+        "link": "https://www.zdnet.com/article/lockin-v7-max-smart-lock-ces/",
+        "published": "Tue, 06 Jan 2026 04:01:00 GMT",
+        "source": "Latest news",
+        "summary": "The Lockin brand is introducing a new smart lock to the US market, featuring a unique charging feature that you'll want to see."
+    },
+    {
+        "id": "https://www.zdnet.com/article/be-polite-to-your-ai/",
+        "title": "Being rude to ChatGPT changes you - and maybe even your relationships",
+        "link": "https://www.zdnet.com/article/be-polite-to-your-ai/",
+        "published": "Tue, 06 Jan 2026 04:00:41 GMT",
+        "source": "Latest news",
+        "summary": "From Alexa to ChatGPT, our interactions with AI are reshaping communication norms. Here's why how we talk to machines can affect real human relationships."
+    },
+    {
+        "id": "https://inc42.com/buzz/even-healthcare-raises-20-mn-to-expand-hospital-network/",
+        "title": "Even Healthcare Raises $20 Mn To Expand Hospital Network",
+        "link": "https://inc42.com/buzz/even-healthcare-raises-20-mn-to-expand-hospital-network/",
+        "published": "Tue, 06 Jan 2026 04:01:34 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Even Healthcare Raises $20 Mn To Expand Hospital Network\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/10/Untitled-design-14.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Even Healthcare has raked in $20 Mn (INR 180.5 Cr) in a fresh funding round from existing investors like Lachy&#8230;"
     }
 ]
